Hyperlink removed for CheckThemOut link and fixed its alignment, Space for info para and image, RDS logo centered in mobile view, horizontal scroll fix, Fixed font style for events headings

--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 /* first screen css */
 .first-screen {
   background-color: #041187;
@@ -206,12 +212,15 @@ div.handles-container {
 #checkout-tag {
   font-size: 1.1em;
   right: 0.5em;
+  text-decoration: none;
 }
 
 #arrow-icon {
   position: relative;
   right: -0.5rem;
-  height: 2em;
+  left: 0.2rem;
+  top: 0.3rem;
+  height: 1.5em;
 }
 
 /* second screen css */
@@ -299,6 +308,7 @@ div.handles-container {
   width: 80%;
   display: flex;
   margin-top: -10%;
+  margin-left: 10%;
 }
 
 /*third screen*/
@@ -310,13 +320,15 @@ div.handles-container {
 .event-title {
   width: auto;
   font-weight: 400;
-  font-size: 2rem;
+  font-family: raleway;
+  font-size: 2.8rem;
   text-align: center;
   color: #e30062;
 }
 
 .upcoming-event {
   font-size: 1.5rem;
+  font-family: raleway;
   margin-top: 2.5rem;
   text-align: center;
 }
@@ -329,17 +341,20 @@ div.handles-container {
 
 .api-event {
   margin: 15px 5px;
-  font-size: 30px;
+  font-size: 1rem;
   color: #604af0;
+  font-family: raleway;
 }
 
 .link-seperators {
   color: #e30062;
   font-weight: bold;
+  font-size: 1.3rem;
 }
 
 .previous-event {
   font-size: 1.5rem;
+  font-family: raleway;
   margin-top: 2.5rem;
   text-align: center;
 }
@@ -355,6 +370,8 @@ div.handles-container {
 .events {
   color: #604af0;
   margin: 0 0.25rem;
+  font-family: raleway;
+  font-size: 1rem;
 }
 
 .video-holder {
@@ -750,7 +767,8 @@ footer {
   }
 
   a.logo-link {
-    left: 9em;
+    left: 35%;
+    right: 35%;
   }
 
   div.heading-container {
@@ -847,9 +865,10 @@ footer {
     font-size: 15px;
   }
 
-  #checkout-tag {
+  /* #checkout-tag {
     font-size: 1em;
-  }
+  }*/
+
   .footer-img {
     width: 100%;
   }
